--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,27 @@
-@import './variables';
+@import url("https://use.typekit.net/xsu2yzn.css");
 
-:root{
-    --brand-main:#ef41fa;
+:root {
+  --brand-main: #ef41fa;
+  --text-color:#666;
 }
 
 body {
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    overflow-x:hidden;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+input,
+label {
+  font-family: sofia-pro, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
