--- a/src/components/Popup.module.scss
+++ b/src/components/Popup.module.scss
@@ -10,13 +10,30 @@
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
+  & .loading_container {
+    background: #fff;
+    filter: drop-shadow(0 1px 10px #ddd);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    border-radius: 3px;
+    min-width: 20rem;
+    padding: 2rem;
+    & p {
+      font-size: 1.3rem;
+      font-weight: 700;
+      color:var(--text-color);
+    }
+  }
   & button {
     color: #fff;
     background: var(--brand-main);
     border: 0;
     width: 20rem;
     height: 3.5rem;
-    border-radius: 3px;
+    border-radius: 150px;
     font-size: 1rem;
     filter: drop-shadow(0 1px 10px var(--brand-main));
     transition: all 0.3s ease;
@@ -41,63 +58,96 @@
     min-width: 30vw;
     z-index: 9999;
     filter: drop-shadow(0 1px 10px #ddd);
-    border-radius:3px;
+    border-radius: 3px;
     & .form_inner {
       max-width: 90%;
       display: flex;
       flex-direction: column;
       align-items: center;
+      & .close_icon {
+        position: absolute;
+        top: 0rem;
+        right: 0;
+        & svg {
+          font-size: 2vw;
+          color: #999;
+          transition: all 0.3s ease;
+          &:hover {
+            cursor: pointer;
+            color: var(--brand-main);
+          }
+        }
+      }
       & .heading {
         display: flex;
         flex-direction: column;
         align-items: center;
+        & img {
+          max-width: 7rem;
+        }
         & h2 {
           display: flex;
           align-items: center;
           justify-content: space-around;
           color: var(--brand-main);
           font-size: 3vw;
-          margin:1vh 0;
+          margin: 0;
           & img {
             max-width: 2rem;
-            margin:0 1rem;
+            margin: 0 1rem;
           }
-          & img:nth-child(1){
-              transform: scale(-1) rotate(90deg);
+          & img:nth-child(1) {
+            transform: scale(-1) rotate(90deg);
           }
         }
         & h3 {
-            color: #666;
+          color: #666;
+          margin: 0;
+        }
+        & span {
+          height: 2px;
+          width: 100px;
+          background: var(--brand-main);
+          display: block;
+          margin: 1rem 0;
         }
         & p {
-            color: #999;
+          color: #999;
+          font-size: 1.2rem;
+          margin: 0;
         }
       }
       & .input_col {
-          display:flex;
-          flex-direction:column;
-          width:100%;
-          margin:3vh 0;
-          & label {
-              color: var(--brand-main);
-              margin-bottom:1vh;
-              font-size:1rem;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 3vh 0;
+        & label {
+          color: var(--brand-main);
+          margin-bottom: 1vh;
+          font-size: 1rem;
+        }
+        & input {
+          background: #eee;
+          color: #fff;
+          border-radius: 5px;
+          border: 0;
+          min-height: 3.5rem;
+          font-size: 16px;
+          box-shadow: inset 0 1px 15px darken(#eee, 5%);
+          transition: all 0.3s ease;
+          &::placeholder {
+            color: #fff;
           }
-          & input {
-              background: #eee;
-              color: #fff;
-              border-radius:5px;
-              border:0;
-              min-height:3.5rem;
-              font-size:16px;
-              box-shadow:inset 0 1px 15px darken(#eee, 5%);
-              &::placeholder {
-                  color:#fff;
-              }
+          &:focus,
+          &:hover {
+            outline: 0px solid #999;
+            box-shadow: inset 0 1px 5px #999;
           }
-          & button {
-              width:100%;
-          }
+        }
+        & button {
+          width: 100%;
+        }
       }
     }
   }
