--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,24 @@
+@import url("https://use.typekit.net/xsu2yzn.css");
 :root {
-  --brand-main:#ef41fa; }
+  --brand-main: #ef41fa;
+  --text-color:#666; }
 
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   overflow-x: hidden; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+input,
+label {
+  font-family: sofia-pro, sans-serif;
+  font-weight: 400;
+  font-style: normal; }
