--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,8 @@
 
 :root {
   --brand-main: #ef41fa;
-  --text-color:#666;
+  --text-color: #666;
+  --text-dark: #111;
 }
 
 body {
@@ -21,7 +22,8 @@ p,
 a,
 input,
 label {
-  font-family: sofia-pro, sans-serif;
+  font-family: roboto-condensed, sans-serif;
   font-weight: 400;
   font-style: normal;
+  margin: 0;
 }
