--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,8 @@
 @import url("https://use.typekit.net/xsu2yzn.css");
 :root {
   --brand-main: #ef41fa;
-  --text-color:#666; }
+  --text-color: #666;
+  --text-dark: #111; }
 
 body {
   padding: 0;
@@ -19,6 +20,7 @@ p,
 a,
 input,
 label {
-  font-family: sofia-pro, sans-serif;
+  font-family: roboto-condensed, sans-serif;
   font-weight: 400;
-  font-style: normal; }
+  font-style: normal;
+  margin: 0; }
