--- a/src/components/Inventory.module.scss
+++ b/src/components/Inventory.module.scss
@@ -11,6 +11,20 @@
   top: 10vh;
   margin: 10vh 0;
   padding: 1rem 0;
+  & .close_icon {
+    position: absolute;
+    top: 0rem;
+    right: 0;
+    & svg {
+      font-size: 2vw;
+      color: #999;
+      transition: all 0.3s ease;
+      &:hover {
+        cursor: pointer;
+        color: var(--brand-main);
+      }
+    }
+  }
   & .container_inner {
     max-width: 90%;
     display: flex;
@@ -54,68 +68,121 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 0.5rem;
       justify-items: center;
-      & .column {
+    }
+    & .btn_container {
+      margin: 2rem 0;
+      width: 100%;
+      & button {
+        width: 100%;
         display: flex;
-        flex-direction: column;
         align-items: center;
-        justify-content: space-between;
-        box-shadow: 0 1px 5px darken(#eee, 5%);
-        padding: 2rem 0;
-        & .heading {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          z-index:2;
-          & h3 {
-            color: var(--brand-main);
-            font-size: 2vw;
-            text-transform: uppercase;
-            font-weight: 700;
-          }
-          & h5 {
-            font-size: 1.5vw;
-          }
+        justify-content: center;
+        position: relative;
+        color: #fff;
+        & svg {
+          color: #fff;
+          font-size: 1.2vw;
+          margin-left: 1rem;
         }
-        & .offer {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          z-index:2;
-          & p {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            color: var(--brand-main);
-            font-size:1.3vw;
-          }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1300px) {
+  .inventory_container {
+    & .container_inner {
+      & .lash_grid {
+        & .best_seller {
+          margin-top: 2rem;
         }
-        & .img_container {
-          max-width: 70%;
-          margin: -5rem 0;
-          z-index:0;
-          & img {
-            max-width: 100%;
-          }
-        }
-
-        & .text_container {
-          max-width: 70%;
-          margin: 1rem 0;
-          display: flex;
-          z-index:2;
-          & p {
-            text-align: Center;
-            font-size:1rem;
-            line-height:1.3;
+      }
+      & .btn_container {
+        margin: 2rem 0;
+        width: 100%;
+        & button {
+          & svg {
+            color: #fff;
+            font-size: 3vw;
+            margin-left: 1rem;
           }
         }
       }
-      & .two_col {
-        grid-column-start: 1;
-        grid-column-end: 3;
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .inventory_container {
+    max-width: 80vw;
+    & .close_icon {
+      & svg {
+        font-size: 6vw;
+        color: #999;
+        transition: all 0.3s ease;
+      }
+    }
+    & .container_inner {
+      max-width: 90%;
+      & .heading {
+        & img {
+          max-width: 7rem;
+        }
+        & h2 {
+          font-weight: 700;
+          font-size: 5vw;
+          margin: 0;
+        }
+        & span {
+          height: 7px;
+          width: 120px;
+          border-radius: 50px;
+          background: var(--brand-main);
+          margin: 1rem 0;
+        }
+        & p {
+          font-size: 3vw;
+          margin: 0;
+        }
+        & h4 {
+          font-size: 3vw;
+          font-weight: 500;
+          margin: 0;
+        }
+      }
+      & .lash_grid {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        box-shadow: 0 1px 5px darken(#eee, 5%);
+        grid-template-columns: 1fr;
+        gap: 0.5rem;
+        justify-items: center;
+      }
+      & .btn_container {
+        margin: 2rem 0;
+        width: 100%;
+        & button {
+          & svg {
+            color: #fff;
+            font-size: 3vw;
+            margin-left: 1rem;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .inventory_container {
+    max-width: 90vw;
+    & .container_inner {
+      max-width: 90%;
+
+      & .btn_container {
+        & button {
+          & svg {
+            color: #fff;
+            font-size: 4vw;
+            margin-left: 1rem;
+          }
+        }
       }
     }
   }
