--- a/src/components/Popup.module.scss
+++ b/src/components/Popup.module.scss
@@ -23,7 +23,10 @@
     & p {
       font-size: 1.3rem;
       font-weight: 700;
-      color:var(--text-color);
+      color: var(--text-color);
+    }
+    & img {
+      max-width: 100%;
     }
   }
   & button {
@@ -128,14 +131,14 @@
         }
         & input {
           background: #eee;
-          color: #fff;
-          border: 0;
+          color: #999;
+          border: 5px solid var(--text-dark);
           min-height: 3.5rem;
           font-size: 16px;
           box-shadow: inset 0 1px 15px darken(#eee, 5%);
           transition: all 0.3s ease;
           &::placeholder {
-            color: #fff;
+            color: #999;
           }
           &:focus,
           &:hover {
@@ -145,6 +148,91 @@
         }
         & button {
           width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: relative;
+          color: #fff;
+          & svg {
+            color: #fff;
+            font-size: 1.2vw;
+            margin-left: 1rem;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 900px) {
+  .section {
+    & .form {
+      position: absolute;
+      transition: all 1s ease;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
+      min-width: 80vw;
+      z-index: 9999;
+      filter: drop-shadow(0 1px 10px #ddd);
+      border-radius: 3px;
+      & .form_inner {
+        max-width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        & .close_icon {
+          position: absolute;
+          top: 0rem;
+          right: 0;
+          & svg {
+            font-size: 6vw;
+            color: #999;
+            transition: all 0.3s ease;
+            &:hover {
+              cursor: pointer;
+              color: var(--brand-main);
+            }
+          }
+        }
+        & .heading {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          & img {
+            max-width: 7rem;
+          }
+          & h2 {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            color: var(--brand-main);
+            font-size: 5vw;
+            margin: 0;
+          }
+
+          & p {
+            color: #999;
+            font-size: 1.2rem;
+            margin: 0;
+          }
+        }
+        & .input_col {
+          & button {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            color: #fff;
+            & svg {
+              color: #fff;
+              font-size: 5vw;
+              margin-left: 1rem;
+            }
+          }
         }
       }
     }
